# clotho

./: .gitignore  1349da37-6c68-464a-8498-62d36587c1af.jsonl  Cargo.toml  GRAPHQLITE-BUGS.md  README.md
.angreal/: task_dev.py
.claude-plugin/: marketplace.json
.github/workflows/: ci.yml  release.yml
.metis/: .index-dirty  code-index-hashes.json  code-index-symbols.json  code-index.md  config.toml  metis.db  vision.md
.metis/adrs/: CLO-A-0001.md  CLO-A-0002.md  CLO-A-0003.md  CLO-A-0004.md
.metis/archived/backlog/bugs/: CLO-T-0095.md
.metis/archived/initiatives/CLO-I-0004/: initiative.md
.metis/backlog/bugs/: CLO-T-0068.md  CLO-T-0078.md  CLO-T-0095.md
.metis/backlog/features/: CLO-T-0069.md  CLO-T-0070.md  CLO-T-0071.md  CLO-T-0072.md  CLO-T-0073.md  CLO-T-0074.md  CLO-T-0075.md  CLO-T-0076.md  CLO-T-0077.md  CLO-T-0079.md  CLO-T-0080.md  CLO-T-0081.md  CLO-T-0082.md  CLO-T-0094.md
.metis/initiatives/CLO-I-0001/: initiative.md
.metis/initiatives/CLO-I-0001/tasks/: CLO-T-0001.md  CLO-T-0002.md  CLO-T-0003.md  CLO-T-0004.md  CLO-T-0005.md  CLO-T-0006.md  CLO-T-0007.md  CLO-T-0008.md  CLO-T-0009.md  CLO-T-0010.md  CLO-T-0011.md
.metis/initiatives/CLO-I-0002/: initiative.md
.metis/initiatives/CLO-I-0002/tasks/: CLO-T-0012.md  CLO-T-0013.md  CLO-T-0014.md  CLO-T-0015.md  CLO-T-0016.md  CLO-T-0017.md  CLO-T-0018.md
.metis/initiatives/CLO-I-0003/: initiative.md
.metis/initiatives/CLO-I-0003/tasks/: CLO-T-0019.md  CLO-T-0020.md  CLO-T-0021.md  CLO-T-0022.md  CLO-T-0023.md  CLO-T-0024.md  CLO-T-0025.md  CLO-T-0026.md  CLO-T-0027.md
.metis/initiatives/CLO-I-0004/: initiative.md
.metis/initiatives/CLO-I-0005/: initiative.md
.metis/initiatives/CLO-I-0005/tasks/: CLO-T-0028.md  CLO-T-0029.md  CLO-T-0030.md  CLO-T-0031.md  CLO-T-0032.md  CLO-T-0033.md  CLO-T-0034.md  CLO-T-0035.md
.metis/initiatives/CLO-I-0006/: initiative.md
.metis/initiatives/CLO-I-0006/tasks/: CLO-T-0036.md  CLO-T-0037.md  CLO-T-0038.md  CLO-T-0039.md
.metis/initiatives/CLO-I-0007/: initiative.md
.metis/initiatives/CLO-I-0008/: initiative.md
.metis/initiatives/CLO-I-0009/: initiative.md
.metis/initiatives/CLO-I-0010/: initiative.md
.metis/initiatives/CLO-I-0011/: initiative.md
.metis/initiatives/CLO-I-0012/: initiative.md
.metis/initiatives/CLO-I-0013/: initiative.md
.metis/specifications/CLO-S-0001/: specification.md
.metis/specifications/CLO-S-0002/: specification.md
.metis/specifications/CLO-S-0003/: specification.md
.metis/specifications/CLO-S-0004/: specification.md
.metis/specifications/CLO-S-0005/: specification.md
clotho-cli/: Cargo.toml
clotho-cli/src/: main.rs  resolve.rs
clotho-cli/src/commands/: capture.rs  create.rs  delete.rs  get.rs  ingest.rs  init.rs  list.rs  mod.rs  ontology.rs  processed.rs  query.rs  reflect.rs  relate.rs  search.rs  status.rs  sync.rs  tui.rs  update.rs
clotho-cli/tests/: cli_tests.rs
clotho-core/: Cargo.toml
clotho-core/src/: error.rs  lib.rs
clotho-core/src/domain/: llm_types.rs  mod.rs  traits.rs  types.rs
clotho-core/src/domain/entities/: capture.rs  derived.rs  execution.rs  mod.rs  person.rs  structural.rs
clotho-core/src/graph/: edges.rs  mod.rs  nodes.rs  queries.rs
clotho-core/tests/: domain_tests.rs  graph_tests.rs
clotho-mcp/: Cargo.toml
clotho-mcp/src/: formatting.rs  instructions.md  lib.rs  main.rs  resolve.rs  server.rs  workspace_resolver.rs
clotho-mcp/src/tools/: all_tools.rs  archive_entity.rs  batch_relations.rs  capture.rs  capture_directory.rs  create_entity.rs  create_note.rs  create_reflection.rs  create_relation.rs  delete_entity.rs  delete_relation.rs  get_relations.rs  ingest.rs  init.rs  list_entities.rs  list_surfaces.rs  list_unprocessed.rs  mod.rs  ontology.rs  processing.rs  push_surface.rs  query.rs  read_entity.rs  read_surface.rs  search.rs  set_workspace.rs  sync.rs  update_entity.rs  workspace_summary.rs
clotho-mcp/tests/: entity_mgmt_tests.rs  mcp_tests.rs
clotho-store/: Cargo.toml
clotho-store/migrations/: V001__entities.sql  V002__extractions.sql  V003__ontology.sql  V004__processing_log.sql  V005__surfaces.sql
clotho-store/src/: content.rs  error.rs  federation.rs  index.rs  lib.rs  migrations.rs  sync.rs  workspace.rs
clotho-store/src/data/: entities.rs  extractions.rs  jsonl.rs  mod.rs  ontology.rs  processing.rs  surfaces.rs
clotho-store/tests/: store_tests.rs
clotho-sync/: Cargo.toml
clotho-sync/src/: engine.rs  lib.rs
clotho-sync/tests/: sync_tests.rs
clotho-tests/: Cargo.toml
clotho-tests/tests/: e2e_workflows.rs
clotho-tui/: Cargo.toml
clotho-tui/src/: app.rs  editor.rs  event.rs  lib.rs  navigator.rs  pty.rs  state.rs  ui.rs
plugins/clotho/: .mcp.json  README.md
plugins/clotho/.claude-plugin/: plugin.json
plugins/clotho/agents/: debrief-processor.md  entity-consolidator.md  period-compiler.md  report-builder.md  review-compiler.md
plugins/clotho/hooks/: hooks.json  session-start-hook.sh  user-prompt-hook.sh
scripts/: install.sh
tests/: Cargo.toml
(+49 files in other folders)
