[workspace]
members = [
    "clotho-core",
    "clotho-store",
    "clotho-cli",
    "clotho-mcp",
    "clotho-sync",
    "clotho-tests",
]
resolver = "2"

[workspace.package]
version = "0.0.1"
edition = "2021"
license = "Apache-2.0"
authors = ["Dylan Storey <contact@colliery.io>"]
repository = "https://github.com/colliery-io/clotho"
homepage = "https://github.com/colliery-io/clotho"
keywords = ["personal", "work-management", "knowledge", "graph", "mcp"]
