[package]
name = "clotho-cli"
version = "0.0.0"
edition = "2021"
description = "Command-line interface for Clotho"
license = "Apache-2.0"

[[bin]]
name = "clotho"
path = "src/main.rs"

[dependencies]
clotho-core = { path = "../clotho-core" }
clotho-store = { path = "../clotho-store" }
clotho-sync = { path = "../clotho-sync" }
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }

[dev-dependencies]
tempfile = "3"
