[package]
name = "clotho-core"
version = "0.1.0"
edition = "2021"
description = "Core domain model, traits, and types for Clotho"
license = "Apache-2.0"

[dependencies]
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
graphqlite = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
uuid = { version = "1", features = ["v4", "serde"] }
