[package]
name = "clotho-mcp"
version = "0.1.0"
edition = "2021"
description = "MCP server for Clotho workspace management"
license = "Apache-2.0"

[[bin]]
name = "clotho-mcp"
path = "src/main.rs"

[lib]
name = "clotho_mcp_server"
path = "src/lib.rs"

[dependencies]
clotho-core = { path = "../clotho-core" }
clotho-store = { path = "../clotho-store" }
clotho-sync = { path = "../clotho-sync" }

# MCP Server
rust-mcp-sdk = { version = "0.8.0", default-features = false, features = [
    "server",
    "macros",
    "stdio",
] }

# Async runtime
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "0.8"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }

# CLI / Config
clap = { version = "4", features = ["derive", "env"] }

# Error handling / logging
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = "0.3"

[dev-dependencies]
tempfile = "3"
