[package]
name = "clotho-sync"
version.workspace = true
edition = "2021"
description = "Git sync layer for Clotho workspaces"
license = "Apache-2.0"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
git2 = { version = "0.19", features = ["vendored-libgit2", "vendored-openssl"] }
thiserror = "2"

[dev-dependencies]
tempfile = "3"
