[package]
name = "clotho-tests"
version = "0.0.0"
edition = "2021"
publish = false

[dependencies]
clotho-core = { path = "../clotho-core" }
clotho-store = { path = "../clotho-store" }
clotho-sync = { path = "../clotho-sync" }
chrono = { version = "0.4", features = ["serde"] }
serde_json = "1"
tempfile = "3"
uuid = { version = "1", features = ["v4"] }
