[package]
name = "clotho-tui"
version.workspace = true
edition = "2021"
description = "Terminal UI library for Clotho — persistent agent surface"
license = "Apache-2.0"

[dependencies]
clotho-core = { path = "../clotho-core" }
clotho-store = { path = "../clotho-store" }
chrono = { version = "0.4", features = ["serde"] }
crossterm = { version = "0.29", features = ["event-stream"] }
futures = "0.3"
ratatui = "0.30"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ratatui-textarea = "0.8"
tokio = { version = "1", features = ["full"] }
unicode-width = "0.2"
uuid = { version = "1", features = ["v4", "serde"] }
